# judicial-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  env.example  pyproject.toml
.huggingface/: README.md
app/: main.py  session_state.py
app/components/: question_form.py  results_viewer.py  uploader.py
config/: prompts.py  settings.py
models/: document.py  query.py
pipeline/: embedder.py  extractor.py  orchestrator.py  rag_agent.py  vector_store.py
services/: llm_client.py  ocr_service.py  parallel_runner.py
storage/: cleanup.py  session_manager.py
tests/: test_document.py  test_embedder.py  test_extractor.py  test_query.py  test_rag_agent.py
