[project]
name = "judicial-rag"
version = "0.1.0"
description = "Sistema de extracción y clasificación de variables sobre documentos judiciales en PDF"
requires-python = ">=3.11"

dependencies = [
    # UI
    "streamlit>=1.35.0",
    # PDF extraction
    "docling>=2.0.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    # Vector store
    "chromadb>=0.5.0",
    # LLM providers
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    # Agentic orchestration
    "langgraph>=0.2.0",
    # Validation and settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Environment variables
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    # Linting and formatting
    "ruff>=0.4.0",

    # Pre-commit hooks
    "pre-commit>=3.7.0",

    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",

    # Semantic versioning
    "bump-my-version>=0.24.0",

    # Conventional commits
    "commitizen>=3.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["app", "pipeline", "models", "services", "storage", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["tests/*"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "`{current_version}`"
replace = "`{new_version}`"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipeline*", "models*", "services*", "storage*", "config*"]